[package]
name = "ascii_renderer"
version = "1.0.0"
edition = "2021"
description = "A wireframe rendering engine that renders into ascii text, written for fun entirely in Rust."
authors = ["Evan McPheron"]
repository = "https://github.com/EvanCMcPheron/ascii_renderer"
license = "MIT"
include = ["src/*", "README.md", "LICENSE", "tutorial.md"]
keywords = ["Ascii", "text", "3D", "Wireframe", "Renderer", "terminal", "command line"]
categories = ["rendering", "command-line-utilities", ]


[dependencies]
clear_screen = "0.1.0"
obj = "0.10.2"
